# SOFAlizer-for-pd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  SOFAlizer~-help.pd  SOFAlizer~.l_amd64
.github/workflows/: Builder.yml  c-cpp.yml
resources/localdeps/: localdeps.linux.sh  localdeps.py
src/: SOFAlizer~.c
